--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_search_devices">Search Devices</string>
+    <string name="main_send_command_btn">Send command</string>
+    <string name="main_search_btn">Discover devices</string>
 </resources>
