--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="main_send_command_btn">Send command</string>
     <string name="main_search_btn">Discover devices</string>
     <string name="error_device_not_paired">Device is not paired. For connection pair to it first</string>
+    <string name="error_unable_to_connect">Unable to connect to device</string>
+    <string name="message_connecting">Connecting...</string>
 </resources>
